[macosx] Modal dialog lost focus

XMLWordPrintable

    • beta
    • generic
    • os_x
    • Verified

        http://java.net/jira/browse/MACOSX_PORT-319 submitted 2011/08/24 by Alexander Petrov
        1)Create frame.
        2)Create modal dialog.
        3)Set frame toFront.
        Result: the dialog has lost focus for a while.
        Build: b204
        Keywords: test-fail-macos
        java/awt/Focus/ModalBlockedStealsFocusTest/ModalBlockedStealsFocusTest

              Assignee:
              Leonid Romanov (Inactive)
              Reporter:
              Vassili Igouchkine (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: