7124376: [macosx] Modal dialog lost focus

Reviewed-by: anthony